# fastlog-io

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/fastlog/: cli.py  config.py  core.py  log_handle.py  monitor.py  otlp_export.py
tests/: test_cli.py  test_log.py  test_log_handle_async.py  test_log_handle_retry.py  test_log_handle_window.py  test_otlp_export.py
