[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fastlog-io"
version         = "0.3.4"
description     = "loguru fast wrapping supports fastapi"
readme          = "README.md"
license         = { text = "MIT License" }
requires-python = ">=3.12"

authors = [
  { name = "owq" }
]

dependencies = [
  "loguru>=0.7.3",
  "fastnanoid==0.4.3",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Topic :: System :: Logging"
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastlog"]

[tool.uv]
package = true


[project.optional-dependencies]
# OTLP logs: OpenTelemetry Python 1.27+ (SDK + HTTP/gRPC exporters; align with collector OTLP support)
otlp = [
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]
test = [
  "pytest>=8.0.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 128

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[project.scripts]
fastlog = "fastlog.cli:main"
